Moved tooltip into own component and fixed component overflow

--- a/projects/ngx-tip-tap-editor/src/_editor.scss
+++ b/projects/ngx-tip-tap-editor/src/_editor.scss
@@ -35,7 +35,7 @@ $-text-color: #000;
     --tip-overlay-color: rgba(0, 0, 0, .2);
   }
 
-  tip-editor, tip-side-by-side, tip-dialog {
+  tip-editor, tip-side-by-side, tip-dialog, tip-popover {
     @include core.helpers;
   }
 }
